improve javac option handling for long form options